# feature-generator

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: README.md
src/feature_generator/: __init__.py  analyzer.py  cli.py  ollama_client.py  prompt_builder.py
src/feature_generator/templates/: mobile_app.yaml  web_app.yaml
