[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature-generator"
version = "0.1.0"
description = "Convert UI mockups and wireframes into structured requirements using local AI models"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jay", email = "" }
]
requires-python = ">=3.10"
keywords = ["ai", "mockup", "wireframe", "code-generation", "ollama", "llm", "vision", "ui-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pillow>=10.3.0",
    "opencv-python>=4.9.0",
    "ollama>=0.3.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
feature-gen = "feature_generator.cli:app"

[project.urls]
Homepage = "https://github.com/jjahanzad/feature-generator"
Repository = "https://github.com/jjahanzad/feature-generator"
Issues = "https://github.com/jjahanzad/feature-generator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/feature_generator"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=feature_generator --cov-report=term-missing"
